<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/bot_home" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore"
            android:title="@string/bot_explore" />
        <item
            android:id="@+id/nav_wallpaper"
            android:icon="@drawable/ic_mosaic"
            android:title="@string/bot_wallpaper" />
        <item
            android:id="@+id/nav_openchat"
            android:icon="@drawable/ic_oc_icon"
            android:title="@string/bot_openchat"/>
    </group>
</menu>