<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:background="@drawable/gradient1">

    <Button
        android:id="@+id/backtoIntro1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/ic_back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/goto_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gotoSignUp"
        android:textSize="15dp"
        android:textStyle="normal"
        android:textColor="@color/White"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="27dp"
        android:layout_marginRight="15dp"/>

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="45dp"
        android:textColor="@color/White"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/desc1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/login_desc"
        android:textColor="@color/White"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title1" />

    <EditText
        android:id="@+id/login_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ+*/=_.!@#~%^()-':;,?`\|{}[]$"
        android:ems="10"
        android:textColorHint="@color/White"
        android:hint="@string/login_hint_email"
        android:backgroundTint="@color/White"
        android:textColor="@color/White"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc1"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp" />

    <EditText
        android:hint="@string/login_hint_password"
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        android:backgroundTint="@color/White"
        android:inputType="textPassword"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_mail" />

    <ImageButton
        android:id="@+id/loginBtn"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:src="@drawable/ic_arrow_right"
        android:scaleType="fitEnd"
        android:tint="@color/White"
        android:background="#f5cc47"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"/>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/White"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toTopOf="@+id/loginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>