<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.RegisterActivity"
    android:background="@drawable/gradient1">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/regUserPhoto"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:background="@drawable/ic_profile_outline"
        android:backgroundTint="@color/White"
        app:civ_border_color="@android:color/transparent"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/regName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addProfileTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addProfileTxt"
        android:textColor="@color/Red"
        android:textSize="15sp"
        android:textStyle="italic"
        android:visibility="invisible"
        android:gravity="bottom"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regUserPhoto" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp" />

    <EditText
        android:id="@+id/regName"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/White"
        android:textColorHint="@color/White"
        android:textColor="@color/White"
        android:ems="10"
        android:hint="@string/register_hint_username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/regMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/regMail"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/White"
        android:textColorHint="@color/White"
        android:textColor="@color/White"
        android:ems="10"
        android:hint="@string/register_hint_email"
        android:inputType="textEmailAddress"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ+*/=_.!@#~%^()-':;,?`\|{}[]$"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/White"
        android:textColorHint="@color/White"
        android:textColor="@color/White"
        android:ems="10"
        android:hint="@string/register_hint_password1"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regMail" />

    <EditText
        android:id="@+id/regPassword2"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/White"
        android:textColorHint="@color/White"
        android:textColor="@color/White"
        android:ems="10"
        android:hint="@string/register_hint_password2"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword" />

    <ImageButton
        android:id="@+id/regBtn"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:src="@drawable/ic_arrow_right"
        android:scaleType="fitEnd"
        android:tint="@color/White"
        android:background="#f5cc47"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regPassword2"
        android:layout_marginTop="70dp"
        android:layout_marginRight="30dp"/>

    <ProgressBar
        android:id="@+id/regProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/White"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/regBtn"
        app:layout_constraintEnd_toEndOf="@+id/regBtn"
        app:layout_constraintStart_toStartOf="@+id/regBtn"
        app:layout_constraintTop_toTopOf="@+id/regBtn" />

    <Button
        android:id="@+id/backtoIntro2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/ic_back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/goto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gotoSignIn"
        android:textSize="15dp"
        android:textStyle="normal"
        android:textColor="@color/White"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="27dp"
        android:layout_marginRight="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>