<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EmailVerificationActivity">

    <ImageView
        android:id="@+id/serverImg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/ic_baseline_mail_outline_24"
        android:backgroundTint="@color/SkyBlue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/titleTextview"
        android:layout_marginTop="110dp"/>

    <TextView
        android:id="@+id/titleTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/museomoderno_bold"
        android:text="@string/email_verification_title"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverImg" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleTextview"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/email_verification_desc"
        android:textColor="@color/Black"
        android:textSize="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/museomoderno_regular"/>


    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="- - - - -"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textSize="15dp"
        android:textColor="@color/Black"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
        android:fontFamily="@font/museomoderno_regular" />

    <Button
        android:id="@+id/verifyEmailBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button7bg"
        android:text="@string/verifyEmailBtn"
        android:textColor="@color/White"
        app:layout_constraintTop_toBottomOf="@id/timeTextView"
        app:layout_constraintBottom_toTopOf="@id/signinwithdifferentaccountBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="visible"/>


    <ProgressBar
        android:id="@+id/verify_progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@id/verifyEmailBtn"
        app:layout_constraintRight_toRightOf="@id/verifyEmailBtn"
        app:layout_constraintLeft_toLeftOf="@id/verifyEmailBtn"
        app:layout_constraintBottom_toBottomOf="@id/verifyEmailBtn"
        android:indeterminateTint="#0F60F6"
        android:visibility="visible"/>

    <Button
        android:id="@+id/signinwithdifferentaccountBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/button4bg"
        android:text="@string/signinwithdifferentaccount_btn"
        android:textAllCaps="true"
        android:textColor="@color/White"/>

</androidx.constraintlayout.widget.ConstraintLayout>